--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,30 +1,28 @@
+Package: permupack
 Type: Package
-Title: Utilities for the RD Course (Objetos, Discretizacion, Matrices, Permutaciones, IO, Visualizacion, S4)
+Title: Paquete R Software Matematico y Estadistico
 Version: 0.1.0
-Author: 
-    person(given = "Paula",
-           family = "Azqueta Tames",
-           email = "pazqueta002@ikasle.ehu.eus",
-           role = c("aut", "cre"))
-Description: Funciones docentes: discretizacion (EW/EF), entropia, matrices, permutaciones, IO, visualizacion (corrplot/pROC), clases S4.
+Authors@R: 
+    person("Paula", "Azqueta Tamés", email = "pazqueta002@ikasle.ehu.eus", role = c("aut", "cre"))
+Description: Paquete didáctico con funciones de discretización (EW/EF), entropía, matrices, permutaciones, IO, visualización (corrplot/pROC) y clases S4.
 Depends: R (>= 4.2)
-Encoding: UTF-8
 License: MIT + file LICENSE
+Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.2
+RoxygenNote: 7.3.3
+URL: https://github.com/pazquetatam/permupack
+BugReports: https://github.com/pazquetatam/permupack/issues
 Imports: 
     stats,
     utils,
     graphics,
     grDevices,
     methods,
-    reshape2
+    reshape2,
     pROC,
-    corrplot, 
-    smeToos
+    corrplot
 Suggests: 
     knitr,
     rmarkdown,
     testthat (>= 3.0.0)
 VignetteBuilder: knitr
-Config/testthat/edition: 3
